fix all visuals for dark mode except timeline

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -278,8 +278,24 @@
   }
 }
 
+
 @media (prefers-color-scheme: dark) {
   .vercelLogo {
     filter: invert(1);
   }
+
+  .columnOne h2 {
+
+    color: beige;
+
+  }
+
+  .columnOne strong {
+    color: beige;
+  }
+
+  .navbar {
+    border-bottom: beige solid 1px;
+  }
+
 }
